[package]
edition = "2021"
name = "keycase"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2.12.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
convert_case = "0.6"
rayon = "1.10"
dashmap = "5.5"
once_cell = "1.19"
num_cpus = "1.16"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
